# obce-test-environment

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: docker-image.yml
chain-extension/: Cargo.toml
chain-extension/src/: ink.rs  lib.rs  substrate.rs
node/: Cargo.toml
node/src/: service.rs
pallet/: Cargo.toml
pallet-example/: Cargo.toml
pallet-example/src/: lib.rs  weights.rs
pallet/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
